2007-02-26  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/device.py (FC3_Device):  Fix device command
	syntax to match anaconda's documentation.

2007-02-21  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-02-21  Chris Lumens  <clumens@redhat.com>

	* pykickstart/base (BaseHandler._registerCommands):  Fix reference to
	cMap and dMap in non-default case (#229505).

2007-02-20  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-02-20  Chris Lumens  <clumens@redhat.com>

	* pykickstart/parser.py (Group):  Added an object for dealing with
	extended group syntax.
	(Packages._processGroup):  Add a new function to handle the extended
	group syntax.

	* pykickstart/constants.py:  New group selection constants.

	* pykickstart/handlers/control.py (dataMap):  Add a mapping for data
	objects as well.

	* pykickstart/base.py (BaseHandler._registerCommands):  Add attributes
	on the handler for the data objects.

2007-02-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart/base.py (BaseHandler.maskAllExcept):  Renamed from
	empty.
	(BaseHandler.__init__):  Accept a mapping argument in the format of
	what's in pykickstart.handlers.control, for when you're overriding all
	the handlers with your own versions.

	* pykickstart/commands/langsupport.py (FC3_LangSupport.__str__):  Add
	a newline.

	* pykickstart/commands/reboot.py:  Provide a default return value in
	the __str__ methods to fix a traceback.

2007-02-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/*.py:  All command objects now have an
	underscore between the version part and the name for ease of
	processing.
	* pykickstart/handlers/control.py (commandMap):  Likewise.

	* pykickstart/base.py (BaseHandler._setCommand):  Strip version part
	from name before creating the attribute.

	* pykickstart/version.py (versionToString):  Added a method to convert
	version numbers back into strings, which is needed for the above